--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@react-navigation/web": "~1.0.0-alpha.9",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.3",
     "expo-constants": "~9.0.0",
@@ -35,11 +36,6 @@
     "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~37.0.0"
-  },
-  "rnpm": {
-    "assets": [
-      "./assets/fonts/"
-    ]
   },
   "private": true
 }
